crates/plotnik-tests/tests/04-emit/bytecode/nodes/wildcard_parent_nested_anchor_impossible.txt
Q = (_
  (array
    .!
    (identifier)
  ) @a
)
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), the first child of `array` must be `identifier`, but `array` begins with `"["`
 --> query.ptk:2:4
  |
2 |   (array
  |    ^^^^^
  |
help: `.!` allows no syntax-tree node in its gap, including anonymous tokens and comments. The soft anchor `.` skips those: `(array
          .
          (identifier)
        )`
